2003-09-01  Miguel de Icaza  <miguel@ximian.com>

	* Encoding.cs (UTF8Unmarked): make it also not error out on
	invalid input, that is what the Microsoft default is for the
	StreamReader and BinaryReader expect (our main consumers).

2003-08-21 Ben Maurer  <bmaurer@users.sourceforge.net>

	* StringBuilder.cs
	(AppendFormat) Use FormatHelper in System.String to avoid
	allocating an extra StringBuilder.
	(Append string, int, int), (Append char, int): Both were
	allocating extra strings.

2003-06-05  Nick Drochak  <ndrochak@gol.com>

	* UTF8Encoding.cs: Cleanups according to class status page

2003-05-10  Miguel de Icaza  <miguel@ximian.com>

	* Encoding.cs (GetEncoding): Add all the aliases documented in the
	framework.  We were missing a few.
	
	Reorganize the table.  Also, convert the input name into the
	lower-case - to _ before we compare against our table.
	
2003-05-10  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* StringBuilder.cs: fixed bug #41397.

2003-04-12  Miguel de Icaza  <miguel@ximian.com>

	* Encoding.cs: Enabled the code paths that we did have commented
	out, they seem to work now.

Fri Apr 11 08:29:50 CEST 2003 Paolo Molaro <lupus@ximian.com>

	* StringBuilder.cs: cache the result from ToString().

2003-03-18  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* UnicodeEncoding.cs: changed WebName from unicodeFFFE to utf-16be.
	  (unicodeFFFE is MS compliant, but isn't valid IANA encoding name.)

2003-03-05  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ASCIIEncoding.cs: fixed bug #38984.

2003-03-05  Aleksey Demakov <avd@openlinksw.com>

	* ASCIIEncoding.cs:
	* Latin1Encoding.cs: fix GetString (byte[]) and
	GetString (byte[], int, int) for zero-length case.

2003-02-19  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Latin1Encoding.cs: added Serializable attribute.

2003-02-03  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Encoding.cs: removed UnixConsoleEncoding.

2003-01-30  Zoltan Varga  <vargaz@freemail.hu>
